--- a/pom.xml
+++ b/pom.xml
@@ -52,10 +52,17 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-arc</artifactId>
         </dependency>
+        
 		<dependency>
 		    <groupId>io.quarkus</groupId>
 		    <artifactId>quarkus-picocli</artifactId>
-		</dependency>        
+		</dependency>
+		     
+		<dependency>
+		    <groupId>io.quarkus</groupId>
+		    <artifactId>quarkus-vertx</artifactId>
+		</dependency>
+		   
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-junit5</artifactId>
