--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
     <dependencies>
 
 		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		</dependency>
+
+		<dependency>
 		    <groupId>io.quarkus</groupId>
 		    <artifactId>quarkus-hibernate-validator</artifactId>
 		</dependency>
