--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,43 @@
             <artifactId>quarkus-junit5</artifactId>
             <scope>test</scope>
         </dependency>
+
+    <!-- other dependencies -->
+
+        <dependency>
+
+            <groupId>org.mockito</groupId>
+
+            <artifactId>mockito-core</artifactId>
+
+            <version>4.0.0</version>
+
+            <scope>test</scope>
+
+        </dependency>
+
+        <dependency>
+
+            <groupId>org.mockito</groupId>
+
+            <artifactId>mockito-junit-jupiter</artifactId>
+
+            <version>4.0.0</version>
+
+            <scope>test</scope>
+
+        </dependency>
+
+        <dependency>
+
+            <groupId>com.fasterxml.jackson.core</groupId>
+
+            <artifactId>jackson-databind</artifactId>
+
+            <version>2.13.0</version>
+
+        </dependency>
+
     </dependencies>
 
     <build>
